[gd_scene load_steps=3 format=3 uid="uid://lgnapwcoon1c"]

[ext_resource type="Theme" uid="uid://de5wx5e0jeuil" path="res://Assets/Themes/default_theme.tres" id="1_fg037"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="2_3xhcx"]

[node name="MainMenuComponent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fg037")
script = ExtResource("2_3xhcx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.120458, 0.200645, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 60
text = "Gord: The Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../StartGameButton")
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/QuitButton" to="." method="_on_quit_button_pressed"]
